Adding encryption key as example

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ PAYMENT_SUBSCRIPTION_ENDPOINT=https://sfqtvxhs70.execute-api.us-east-2.amazonaws
 PAYMENT_SECRET_KEY=abcde
 GATEWAY=pagar.me
 GATEWAY_APIKEY=ak_test_.......
+GATEWAY_ENCRYPTION_KEY=ek_test_....
