--- a/database.yml
+++ b/database.yml
@@ -1,14 +1,14 @@
 ---
 development:
   dialect: postgres
-  database: subscription_service_development
+  database: subscription
   user: postgres
   password: postgres
-  host: 127.0.0.1
+  host: postgress-postgresql
   pool: 5
 
 test:
   url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/subscription_service_test?sslmode=disable"}}
 
 production:
-  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/subscription_service_production?sslmode=disable"}}
+  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@subscription-postgres-service:5432/subscription?sslmode=disable"}}
